tests/errors/single_quote_string.ki
var s = 'single quotes not supported'
